--- a/notebooks/gaze_annotation/generate_gaze_annotation_kvasir.ipynb
+++ b/notebooks/gaze_annotation/generate_gaze_annotation_kvasir.ipynb
@@ -74,15 +74,13 @@
     "    # gaussian matrix\n",
     "    for i in range(x):\n",
     "        for j in range(y):\n",
-    "            M[j, i] = np.exp(-1.0 * (((float(i) - xo) ** 2 / (2 * sx * sx)\n",
-    "                                      ) + ((float(j) - yo) ** 2 / (2 * sy * sy))))\n",
+    "            M[j, i] = np.exp(-1.0 * (((float(i) - xo) ** 2 / (2 * sx * sx)) + ((float(j) - yo) ** 2 / (2 * sy * sy))))\n",
     "\n",
     "    return M\n",
     "\n",
     "\n",
     "def normalize_map(s_map):\n",
-    "    norm_s_map = (s_map - np.min(s_map)) / \\\n",
-    "        ((np.max(s_map) - np.min(s_map)) * 1.0)\n",
+    "    norm_s_map = (s_map - np.min(s_map)) / ((np.max(s_map) - np.min(s_map)) * 1.0)\n",
     "    return norm_s_map\n",
     "\n",
     "\n",
@@ -98,8 +96,7 @@
     "\n",
     "    heatmap = ndimage.filters.gaussian_filter(heatmap, 70)\n",
     "    heatmap = normalize_map(heatmap)\n",
-    "    heatmap = cv2.resize(heatmap, dsize=(\n",
-    "        originalsize[1], originalsize[0]), interpolation=cv2.INTER_CUBIC)\n",
+    "    heatmap = cv2.resize(heatmap, dsize=(originalsize[1], originalsize[0]), interpolation=cv2.INTER_CUBIC)\n",
     "\n",
     "    return heatmap.astype(np.float16)"
    ]
@@ -110,11 +107,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_gaze = pd.read_csv(\"../../gaze/kvasir_fixation.csv\")\n",
+    "df_gaze = pd.read_csv(\"../../GazeMedSeg/kvasir_fixation.csv\")\n",
     "\n",
     "for i, (name, group) in enumerate(df_gaze.groupby(\"IMAGE\")):\n",
     "    img_file = group[\"IMAGE\"].tolist()[0]\n",
-    "    org_img_size = (int(group[\"IMAGE_HEIGHT\"].tolist()[0]), int(group[\"IMAGE_WIDTH\"].tolist()[0]))\n",
+    "    org_img_size = (int(group[\"IMAGE_HEIGHT\"].tolist()[0]), int(\n",
+    "        group[\"IMAGE_WIDTH\"].tolist()[0]))\n",
     "\n",
     "    gaze_list = np.array(\n",
     "        df_gaze.loc[\n",
@@ -173,8 +171,7 @@
     "\n",
     "    d.setUnaryEnergy(unary)\n",
     "    # d.addPairwiseGaussian(3/scale_factor, compat=10)\n",
-    "    d.addPairwiseBilateral(sxy=80 / scale_factor, srgb=13,\n",
-    "                           rgbim=np.copy(img), compat=compat)\n",
+    "    d.addPairwiseBilateral(sxy=80 / scale_factor, srgb=13, rgbim=np.copy(img), compat=compat)\n",
     "\n",
     "    Q = d.inference(t)\n",
     "    # crf = np.argmax(Q, axis=0).reshape((h, w))\n",
@@ -204,13 +201,16 @@
     "for i, path in tqdm(enumerate(glob.glob(os.path.join(root, \"gaze\", \"heatmap\", \"*.jpg\")))):\n",
     "    img_name = os.path.basename(path).split(\".\")[0]\n",
     "\n",
-    "    img = np.array(Image.open(os.path.join(root, \"images\", f\"{img_name}.jpg\")).convert(\"RGB\"))\n",
-    "    gt = np.array(Image.open(os.path.join(root, \"masks\", f\"{img_name}.jpg\")).convert(\"L\"))\n",
+    "    img = np.array(Image.open(os.path.join(\n",
+    "        root, \"images\", f\"{img_name}.jpg\")).convert(\"RGB\"))\n",
+    "    gt = np.array(Image.open(os.path.join(\n",
+    "        root, \"masks\", f\"{img_name}.jpg\")).convert(\"L\"))\n",
     "\n",
     "    heatmap = Image.open(path).convert(\"L\")\n",
     "    heatmap = np.array(heatmap).astype(np.float32) / 255\n",
     "\n",
-    "    crf_map = crf_inference(img, heatmap, t=t, scale_factor=scale_factor, compat=compat)\n",
+    "    crf_map = crf_inference(\n",
+    "        img, heatmap, t=t, scale_factor=scale_factor, compat=compat)\n",
     "    save_folder = os.path.join(root, \"gaze\", f\"crf_compat{compat}\")\n",
     "    if not os.path.exists(save_folder):\n",
     "        os.makedirs(save_folder)\n",
@@ -270,9 +270,12 @@
     "\n",
     "for i, path in tqdm(enumerate(glob.glob(os.path.join(root, \"gaze\", \"heatmap\", \"*.jpg\")))):\n",
     "    path = os.path.basename(path).split(\".\")[0]\n",
-    "    gt = np.array(Image.open(os.path.join(root, \"masks\", f\"{path}.jpg\")).convert(\"L\"))\n",
-    "    heatmap = np.array(Image.open(os.path.join(root, \"gaze\", \"heatmap\", f\"{path}.jpg\")).convert(\"L\"))\n",
-    "    crf_map = np.array(Image.open(os.path.join(root, \"gaze\", f\"crf_compat{compat}\", f\"{path}.jpg\")).convert(\"L\"))\n",
+    "    gt = np.array(Image.open(os.path.join(\n",
+    "        root, \"masks\", f\"{path}.jpg\")).convert(\"L\"))\n",
+    "    heatmap = np.array(Image.open(os.path.join(\n",
+    "        root, \"gaze\", \"heatmap\", f\"{path}.jpg\")).convert(\"L\"))\n",
+    "    crf_map = np.array(Image.open(os.path.join(\n",
+    "        root, \"gaze\", f\"crf_compat{compat}\", f\"{path}.jpg\")).convert(\"L\"))\n",
     "\n",
     "    heatmap = heatmap.astype(np.float32) / 255\n",
     "    crf_map = crf_map.astype(np.float32) / 255\n",
